--- a/index.html
+++ b/index.html
@@ -185,11 +185,6 @@
     <section id="resume" class="resume">
       <div class="container" data-aos="fade-up">
 
-        <div class="section-title">
-          <h2>Resume</h2>
-          <p align="left">Dynamic and results-driven digital content strategist with a strong background in website management and user experience. Proven ability to project manage website updates, create effective landing pages, and enhance product pages to drive meaningful lead conversions. Skilled in conducting user research, usability testing, and visual/UI/interaction design to optimize information architecture. Proficient in analyzing web metrics and delivering reports to identify growth opportunities and improve digital performance. Adept at implementing SEO optimization projects and developing web usability features to enhance the user experience. Collaborative team player with a track record of successfully working with cross-functional teams and utilizing diverse tech stacks.</p>
-        </div>
-
         <div class="row">
           <div class="col-lg-6">
             <h3 class="resume-title">Summary</h3>
@@ -201,7 +196,7 @@
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Bachelor of Science &amp; Technical Communication</h4>
+              <h4>Bachelor of Science in Technical Communication</h4>
               <h5>2018 - 2022</h5>
               <p><em>New Mexico Tech, Socorro, NM</em></p>
             </div>
@@ -211,9 +206,9 @@
               <h5>2022 - 2023</h5>
               <p><em>Dataminr, New York, NY </em></p>
               <ul>
-                <li>Successfully project managed 10 website updates, including leading the creation of 5 landing pages and 3 product pages, resulting in a 20% increase in meaningful lead conversions and a 15% improvement in user experience.</li>
-                <li>Identified and implemented growth strategies that led to a 25% increase in website visitor retention and a 30% increase in overall engagement. Created and delivered 20 comprehensive weekly and monthly reports on web metrics and digital performance to track progress and drive data-informed decision-making.</li>
-                <li>Led a tech stack review, resulting in the successful implementation of upgraded digital asset management software. Supported the agency evaluation process, resulting in the selection of the most suitable technology solutions.</li>
+                <li>Managed 10 website updates, including leading the creation of 5 landing pages and the optimization of 3 product pages, resulting in an improvement in webpage navigation.</li>
+                <li>Identified and implemented growth strategies that led to an increase in website visitor metrics. Created and delivered comprehensive weekly and monthly reports on web metrics and digital performance to track progress and drive data-informed decision-making.</li>
+                <li>Led a tech stack review, resulting in the successful procurement of upgraded digital asset management software. Supported the agency evaluation process, resulting in the selection of the most suitable technology solutions.</li>
               </ul>
             </div>
 
@@ -224,15 +219,15 @@
               <h5>2021 - 2022</h5>
               <p><em>Dataminr, New York, NY </em></p>
               <ul>
-                <li>Successfully managed the development of Dataminr's social editorial calendar, overseeing the creation and tracking of 50+ marketing campaigns. This contributed to a 30% increase in engagement and a 25% growth in social media followers.</li>
                 <li>Collaborated with the VP of Diversity, Equity, and Inclusion to launch a targeted social media program, resulting in a record-breaking 50% increase in applications for Dataminr's internship program across various disciplines. </li>
-                <li>Managed and curated social media accounts on LinkedIn, Instagram, and Twitter, generating 90+ engaging social media posts using Canva. This contributed to a 30% increase in overall social media engagement.</li>
+                <li>Led the development of Dataminr's social editorial calendar, overseeing the creation and tracking of 20+ marketing campaigns. This contributed to a 40% growth in social media followers.</li>
+                <li>Managed and curated social media accounts on LinkedIn, Instagram, and Twitter, generating 90+ social media posts using Canva.</li>
               </ul>
             </div>
             <div class="resume-item">
               <h4>Marketing Intern</h4>
               <h5>Jun 2018 - Aug 2018</h5>
-              <p><em>Flow Science Inc., Sanat Fe, NM</em></p>
+              <p><em>Flow Science Inc., Santa Fe, NM</em></p>
               <ul>
                 <li>Translated crucial marketing materials from English to Spanish, enabling enhanced engagement with Spanish-speaking customers in the Latin American region. This contributed to an increase in customer reach and improved brand perception in the target market.</li>
                 <li>Optimized software user content to increase visibility and conversions; used Mailchimp, Wistia, WordPress, Hubspot, and Adobe Photoshop for content management.</li>
